# lerobot-teleoperator-pico4

./: LICENSE  README.md  README.zh-CN.md  pyproject.toml
lerobot_teleoperator_pico4/: __init__.py  config_bi_pico4.py  config_pico4.py  lerobot_teleop_bi_pico4.py  lerobot_teleop_pico4.py
lerobot_teleoperator_pico4/scripts/: lerobot_record_pico4.py  teleoperate_pico4.py
tests/: test_plugin.py
